--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,12 @@ h2 {
 }
 
 h3 {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 700;
 }
 
 p {
-    font-size: 17px;
+    font-size: 15px;
 }
 
 li {
@@ -78,9 +78,8 @@ a {
 /**********************************************      FORM      *************************************************/
 .section_container {
     display: flex;
-    height: 130px;
+    gap: 25px;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 form {
@@ -88,26 +87,27 @@ form {
 }
 
 .icon_box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    height: 50px;
     background-color: var(--greybg);
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
+    padding: 16px;
+}
+
+.icon_info_section {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .search {
-    height: 49px;
-    width: 220px;
     border-width: 0.1px;
     border-color: #f2f2f230;
+    width: 250px;
+    font-size: 18px;
+    font-weight: 600;
+    padding-left: 15px;
 }
 
 .submit {
-    height: 50px;
-    width: 140px;
     font-weight: 700;
     font-size: 15px;
     color: rgba(255, 255, 255, 0.86);
@@ -115,24 +115,29 @@ form {
     border: none;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
+    padding: 16px;
+    font-size: 18px;
+    font-weight: 600;
+
+}
+
+.header_h2 {
+    display: flex;
+    align-items: center;
 }
 
 /**********************************************      FILTER      *************************************************/
 .filter_container {
     display: flex;
-    height: 80px;
-    width: 950px;
-    justify-content: space-between;
-    align-items: center;
-    align-content: flex-end;
     flex-wrap: wrap;
+    gap: 60px;
 }
 
 .filter_btn {
     display: flex;
     align-items: center;
     flex-direction: row-reverse;
-    height: 44px;
+    height: 50px;
     border: 1.5px var(--greybg) solid;
     border-left: none;
     background-color: white;
@@ -146,8 +151,8 @@ form {
 .filter_icon {
     background-color: var(--selectblue);
     color: var(--mainblue);
-    height: 44px;
-    width: 44px;
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
     align-items: center;
     display: flex;
@@ -155,54 +160,61 @@ form {
 }
 
 .icon_info_section {
-    display: flex;
-    justify-content: space-between;
-    width: 460px;
-    height: 120px;
-    align-items: center;
+    gap: 10px;
 }
 
 /**********************************************      MAIN      *************************************************/
 
 .main_box {
-    width: 1400px;
-    height: 1100px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+}
+
+.stars {
+    color: var(--mainblue);
+    display: flex;
+    font-size: 12px;
+}
+
+.stars_box {
+    padding-top: 25px;
+}
+
+.grey_stars {
+    display: flex;
+    color: rgba(128, 128, 128, 0.365);
 }
 
 .hebergements {
     display: flex;
-    width: 1400px;
-    height: 700px;
-    justify-content: space-between;
 }
 
 .target_lodging {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    flex: 1 75%;
+    gap: 40px;
     padding: 40px;
-    width: 815px;
-    height: 630px;
+    margin-right: 55px;
+    flex-wrap: wrap;
     background-color: var(--greybg);
     border-radius: 20px;
+}
+
+.moretargetlodging {
+    font-size: 18px;
+    font-weight: 600;
 }
 
 .categorie_title {
     display: flex;
     align-self: flex-start;
-    align-items: flex-end;
     flex-wrap: wrap;
-    width: 900px;
-    height: 40px;
+    width: 100%;
 }
 
 .target_figure {
     display: flex;
     flex-direction: column;
-    height: 230px;
     border-radius: 20px;
     background-color: white;
     box-shadow: 2px 2px 12px 8px rgba(0, 0, 0, 0.044);
@@ -210,38 +222,38 @@ form {
 }
 
 .target_img {
-    display: flex;
-    align-items: center;
     border-radius: 15px 15px 0 0;
-    height: 130px;
-    width: 235px;
+    height: 100px;
+    width: 244.3px;
 }
 
 .target_figcaption {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 5px;
     gap: 4px;
+}
+
+.popular_header {
+    display: flex;
+    justify-content: space-between;
 }
 
 .popular_lodging {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 380px;
-    height: 630px;
-    padding: 40px;
+    flex-wrap: wrap;
     background-color: var(--greybg);
     border-radius: 20px;
+    justify-content: space-between;
+    padding: 40px;
 }
 
 .categorie_title_2 {
     display: flex;
     align-self: flex-start;
-    align-items: flex-end;
     flex-wrap: wrap;
-    width: 300px;
-    height: 40px;
+    width: 100%;
 }
 
 .aside_figure {
@@ -254,15 +266,112 @@ form {
 
 .aside_img {
     display: flex;
-    align-items: center;
     border-radius: 15px 0 0 15px;
-    height: 150px;
-    width: 150px;
+    height: 115px;
+    width: 115px;
 }
 
 .aside_figcaption {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 10px 20px 0 25px;
     gap: 4px;
+}
+
+.activities {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+}
+
+.activities_title {
+    display: flex;
+    align-self: flex-start;
+    flex-wrap: wrap;
+    width: 100%;
+    padding-bottom: 30px;
+}
+
+.activity_box {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.activity_figure {
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+    background-color: white;
+    box-shadow: 2px 2px 12px 8px rgba(0, 0, 0, 0.044);
+}
+
+.activity_img {
+    display: flex;
+    border-radius: 15px 15px 0 0;
+    height: 400px;
+    width: 320px;
+    box-shadow: 2px 2px 12px 8px rgba(0, 0, 0, 0.044);
+}
+
+.activity_figcaption {
+    padding: 20px;
+}
+
+.double_article {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.activity_img_fort {
+    display: flex;
+    border-radius: 15px 15px 0 0;
+    height: 180px;
+    width: 320px;
+    box-shadow: 2px 2px 12px 8px rgba(0, 0, 0, 0.044);
+}
+
+.activity_img_island {
+    display: flex;
+    border-radius: 15px 15px 0 0;
+    height: 120px;
+    width: 320px;
+    box-shadow: 2px 2px 12px 8px rgba(0, 0, 0, 0.044);
+}
+
+.activity_img_notre-dame {
+    display: flex;
+    border-radius: 15px 15px 0 0;
+    height: 140px;
+    width: 320px;
+    box-shadow: 2px 2px 12px 8px rgba(0, 0, 0, 0.044);
+}
+
+.activity_img_longchamp {
+    display: flex;
+    border-radius: 15px 15px 0 0;
+    height: 160px;
+    width: 320px;
+    box-shadow: 2px 2px 12px 8px rgba(0, 0, 0, 0.044);
+}
+
+/**********************************************      FOOTER      *************************************************/
+.footer_box {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--greybg);
+    margin-top: 40px;
+    padding: 50px 400px 50px 50px;
+}
+
+.footer_ul {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+
+.footer_category {
+    font-weight: 700;
+    padding-bottom: 10px;
 }
